--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,37 @@ button:focus-visible {
     }
 }
 
+@keyframes wave {
+    0% {
+        transform: rotate(0deg);
+    }
+    10% {
+        transform: rotate(14deg);
+    }
+    20% {
+        transform: rotate(-8deg);
+    }
+    30% {
+        transform: rotate(14deg);
+    }
+    40% {
+        transform: rotate(-4deg);
+    }
+    50% {
+        transform: rotate(10deg);
+    }
+    60% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
 .loader {
     animation: spin 1s linear infinite;
+}
+
+.waving {
+    animation: wave 2s linear infinite;
 }
